syntax = "proto3";

option csharp_namespace = "Post.API.Protos";

package Post.API;

service PostApiService{
	  rpc GetPostApiService (GetPostApiServiceRequest) returns (GetPostApiServiceReply);
}

message GetPostApiServiceRequest {
	int64 user_id = 1;
	int32 page_index = 2;
	int32 page_size = 3;
}

message GetPostApiServiceReply {
  repeated PostApiServiceDetail details = 1;
	int32 total_records = 2;
	int32 current_page = 3;
	int32 page_size = 4;
	int32 total_pages = 5;
	bool has_next_page = 6;
	bool has_previous_page = 7;
}

message PostApiServiceDetail {
  int64 id = 1;
  string title = 2;
  string content = 3;
  string image_url = 4;
  string video_url = 5;
  string audio_url = 6;
  string file_url = 7;
  string slug = 8;
  bool is_published = 9;
  bool is_deleted = 10;
  int64 category_id = 11;
  int64 author_id = 12;

}